[FIX] point_of_sale: cannot scroll in categories
Current behaviour:
When there is too many product categories,
you cannot see the last items, because
the scrollbar is hidden.
This was made to hide the scrollbar on mobile.

Steps to reproduce:
1. Go to Point of Sale
2. Configuration > PoS Product Categories
3. Duplicate one category 12 times
4. Dashboard > New Session
5. The list of categories is too long
6. Cannot see the last items

Cause of the issue:
Introduced by https://github.com/odoo/odoo/commit/60f41b1f831248c58f554dbe40114ef0d4ce42c0#diff-f23069b3927b8544dd51433e277cf8b650b10a67e5b8648155e427aaa31c19a3R838

Fix:
Make the scrollbar disappear on mobile,
and appear otherwise.

opw-3653429

--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -834,6 +834,11 @@ td {
 .pos .rightpane-header .categories-header {
     display: flex;
     overflow-x: auto;
+}
+
+.pos .rightpane-header .categories-header.scrollbar-hidden {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 
     &::-webkit-scrollbar {
         display: none;
